create room API created, restricted to clients that have created a player class (username is attached to their sessionID). Autopopulates mastercode, started, and participants
