# mastermind/src/main/java/com/jl/mastermind/Controllers/RoomController.java
@@ -3,18 +3,24 @@ package com.jl.mastermind.controllers;
 import java.net.URISyntaxException;
 import java.util.Map;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.jl.mastermind.dto.RoomCreationDTO;
 import com.jl.mastermind.dto.RoomUpdateDTO;
 import com.jl.mastermind.entities.Room;
 import com.jl.mastermind.services.RoomService;
+
+import jakarta.servlet.http.HttpSession;
+import jakarta.validation.Valid;
 
 
 @RestController
@@ -52,21 +58,12 @@ public class RoomController {
         return ResponseEntity.ok(updatedRoom);
     }
 
-    // @PostMapping("/rooms/create-room")
-    // public ResponseEntity<Room> createRoom(@Valid @RequestBody Room room) {
-    //     Optional<Room> roomOptional = roomRepository.findByRoomName(room.getRoomName().toLowerCase());
-    //     if (roomOptional.isPresent()) {
-    //         throw new RoomNameAlreadyExistsException(room.getRoomName() + " already exists");
-    //     } else {
-    //         roomRepository.createRoom(room);
-    //         roomOptional = roomRepository.findByRoomName(room.getRoomName().toLowerCase());
-    //         if (roomOptional.isPresent()) {
-    //             return ResponseEntity.status(HttpStatus.CREATED).body(room);
-    //         } else {
-    //             return ResponseEntity.internalServerError().build();
-    //         }
-    //     } 
-    // }
+    @PostMapping("/create-room")
+    public ResponseEntity<Room> createRoom(@Valid @RequestBody RoomCreationDTO roomCreationDTO, HttpSession session) throws URISyntaxException {
+        Room newRoom = roomService.createRoom(roomCreationDTO, session);
+        return ResponseEntity.status(HttpStatus.CREATED).body(newRoom);
+
+    }
 
     // @PostMapping("/{roomName}/Participants")
     // public ResponseEntity<Map> addParticipant(@PathVariable String roomName, @RequestBody String joiningPlayerUsername) {
