# mastermind/src/main/java/com/jl/mastermind/dto/RoomUpdateDTO.java
@@ -2,13 +2,20 @@ package com.jl.mastermind.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Min;
 import lombok.Data;
+
+import static com.jl.mastermind.util.AppConstants.RoomParameters.*;
 
 @Data
 public class RoomUpdateDTO {
+    @Min(value = MIN_DIFFICULTY, message = "Difficulty must be at least " + MIN_DIFFICULTY)
+    @Max(value = MAX_DIFFICULTY, message = "Difficulty can't be higher than " + MAX_DIFFICULTY)
     private Integer difficulty;
     
     @JsonProperty("max_guesses")
+    @Min(value = MIN_GUESSES, message = "You must have a minimum of " + MIN_GUESSES + " guesses")
     private Integer maxGuesses;
     private Boolean closed;
     private Boolean started;
